--- a/需求文档.md
+++ b/需求文档.md
@@ -2,7 +2,7 @@
 
 ## 1. 项目背景
 
-基于百度营销开发者中心提供的搜索广告投放API，开发一个完整的广告投放管理应用，帮助用户高效管理百度搜索广告的各个层级物料。
+基于百度营销开发者中心提供的搜索广告投放API（https://dev2.baidu.com/content?sceneType=0&pageId=100305&nodeId=21&subhead=），开发一个完整的广告投放管理应用，帮助用户高效管理百度搜索广告的各个层级物料。
 
 ## 2. 业务目标
 
